fixed social icons spacing

--- a/style.css
+++ b/style.css
@@ -42,7 +42,11 @@ header {
 }
 
 .top-header .social-icons li {
-  letter-spacing: 20px;
+  margin-right: 20px;
+}
+
+.top-header .social-icons li:last-child {
+  margin-right: 0;
 }
 
 .bottom-header {
@@ -55,7 +59,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
 }
 .bottom-header-content .logo {
   background-image: url("assets/wedgwood-logo.png");
